# telegram-downloader

./: .dockerignore  .example.env  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt  run.py
.github/workflows/: docker-publish.yml
src/: bot.py  client.py
src/cogs/: __init__.py  downloader.py  error_handler.py  general.py
src/libs/: FastTelethon.py
src/middlewares/: auth.py  handlers.py
src/models/: __init__.py  downloading_file.py
src/utils/: __init__.py  check_file_exists.py  create_blockquote.py  env.py  estimated_time.py  get_file.py  get_file_name.py  trancute_message.py
